2018-03-12  Philip Allison <mangobrain@googlemail.com>

	* ChangeLog: Many things! Updated to C++11, networking fixed on dual-
	stack machines, ported to GTK 3.22, and replaced build system with
	Meson.

2009-10-06  Philip Allison <mangobrain@googlemail.com>

	* ChangeLog: Update ChangeLog for 0.4 and reflow properly

2009-10-06  Philip Allison <mangobrain@googlemail.com>

	* ChangeLog, NEWS: Update ChangeLog and NEWS for 0.4 Reflow ChangeLog
	to 78 characters using vim

2009-10-06  Philip Allison <mangobrain@googlemail.com>

	* src/game.cxx: Fix end-game logic bug reported by Jan Engelhardt When
	the game ends, the winning player should automatically capture any
	empty squares, as this advances the board to the state it would be in
	if the game was played until the board was full.  Without this, it is
	possible for one player to block off all their opponent's moves and
	lose the game, even though the number of empty squares remaining would
	make their piece count highest if captured.

2009-10-06  Philip Allison <mangobrain@googlemail.com>

	* src/game.cxx, src/game.hxx, src/gamewindow.hxx, src/infector.cxx:
	Make start & end pop-ups trigger on main loop idle Prevent sending the
	last move of a game over the network from being delayed until the win
	dialogue is closed by the winning player, by connecting a function for
	displaying the dialogue to Glib::SignalIdle.  Use the same technique
	for the "You are playing as..." dialogues on clients at the start of a
	network game.

2009-09-21  Philip Allison <mangobrain@googlemail.com>

	* po/POTFILES.in, po/cs.po: Update i18n support and Czech translation
	Reference new GtkBuilder/UIManager files in POTFILES.in instead of the
	old Glade file.  Update the Czech translation for use with the new set
	of messages.

2009-09-21  Philip Allison <mangobrain@googlemail.com>

	* configure.ac: Remove libglademm dependency; bump version to 0.4
	Don't look for libglademm on the host system any more; instead, look