@@ -1,3 +1,9 @@
+2018-03-22  Philip Allison <mangobrain@googlemail.com>
+
+	* data/meson.build: Fix icon installation path
+	* src/meson.build: Require >= libsigc++-2.10
+	* General: Move to new mem_fun syntax for libsigc++-2.10; version 0.5
+
 2018-03-12  Philip Allison <mangobrain@googlemail.com>
 
 	* ChangeLog: Many things! Updated to C++11, networking fixed on dual-
